--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -96,6 +96,7 @@ bind -T root M-6 last-window
 # Cannot use any binds while in this mode
 bind -T root C-g source "$XDG_CONFIG_HOME/tmux/locked.conf"
 
+
 ############
 # Theming #
 ############
@@ -119,7 +120,10 @@ set -g status-right-length "100"
 set -g status-left-style NONE
 set -g status-right-style NONE
 
-set -g status-left "#[fg=#1d202f,bg=#7aa2f7,bold] #S #[fg=#7aa2f7,bg=#1f2335,nobold,nounderscore,noitalics]"
+# Use the external script for session list
+set -g status-left "#[fg=#1d202f,bg=#7aa2f7,bold]#($XDG_CONFIG_HOME/tmux/scripts/session_list)#[fg=#7aa2f7,bg=#1f2335,nobold,nounderscore,noitalics] "
+
+# Updated status-right to include hostname, date, and time
 set -g status-right "#[fg=#1d202f,bg=#7aa2f7,bold] #h #[fg=#7aa2f7,bg=#3b4261,nobold] %Y-%m-%d #[fg=#7aa2f7,bg=#1f2335] %I:%M %p "
 
 setw -g window-status-activity-style "underscore,fg=#a9b1d6,bg=#1f2335"
@@ -129,12 +133,17 @@ setw -g window-status-format "#[fg=#1f2335,bg=#1f2335,nobold,nounderscore,noital
 setw -g window-status-current-format "#[fg=#1f2335,bg=#3b4261,nobold,nounderscore,noitalics]#[fg=#7aa2f7,bg=#3b4261,bold] #I  #W #F #[fg=#3b4261,bg=#1f2335,nobold,nounderscore,noitalics]"
 
 # Set status bar to a single line
-#set -g status 2
 set -g status-format[0] "#[align=left range=left #{status-left-style}]#[push-default]#{T;=/#{status-left-length}:status-left}#[pop-default]#[norange default]#[list=on align=#{status-justify}]#[list=left-marker]<#[list=right-marker]>#[list=on]#{W:#[range=window|#{window_index} #{window-status-style}#{?#{&&:#{window_last_flag},#{!=:#{window-status-last-style},default}}, #{window-status-last-style},}#{?#{&&:#{window_bell_flag},#{!=:#{window-status-bell-style},default}}, #{window-status-bell-style},#{?#{&&:#{||:#{window_activity_flag},#{window_silence_flag}},#{!=:#{window-status-activity-style},default}}, #{window-status-activity-style},}}]#[push-default]#{T:window-status-format}#[pop-default]#[norange default]#{?window_end_flag,,#{window-status-separator}},#[range=window|#{window_index} list=focus #{?#{!=:#{window-status-current-style},default},#{window-status-current-style},#{window-status-style}}#{?#{&&:#{window_last_flag},#{!=:#{window-status-last-style},default}}, #{window-status-last-style},}#{?#{&&:#{window_bell_flag},#{!=:#{window-status-bell-style},default}}, #{window-status-bell-style},#{?#{&&:#{||:#{window_activity_flag},#{window_silence_flag}},#{!=:#{window-status-activity-style},default}}, #{window-status-activity-style},}}]#[push-default]#{T:window-status-current-format}#[pop-default]#[norange list=on default]#{?window_end_flag,,#{window-status-separator}}}#[nolist align=right range=right #{status-right-style}]#[push-default]#{T;=/#{status-right-length}:status-right}#[pop-default]#[norange default]"
 set -g status-format[1] ""
 
-# Force status bar update
-set-hook -g after-resize-pane "refresh-client -S"
+# Force status bar update (removed invalid options)
+set-hook -g after-new-session "refresh-client -S"
+set-hook -g after-new-window "refresh-client -S"
+set-hook -g after-rename-session "refresh-client -S"
+set-hook -g after-rename-window "refresh-client -S"
+set-hook -g client-attached "refresh-client -S"
+set-hook -g client-detached "refresh-client -S"
 set-hook -g session-created "refresh-client -S"
 set-hook -g session-closed "refresh-client -S"
-
+set-hook -g window-linked "refresh-client -S"
+set-hook -g window-unlinked "refresh-client -S"
