telescope show hidden files and sessionizer show nested team dir

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -79,7 +79,7 @@ bind -T root M-v split-window -v
 bind -T root M-w new-window
 
 bind -T root M-f run-shell "$XDG_CONFIG_HOME/tmux/scripts/popup.sh"
-bind -T root M-e run-shell "tmux neww /Users/Shaarawi/.config/tmux/scripts/tmux-sessionizer"
+bind -T root M-e run-shell "tmux neww $XDG_CONFIG_HOME/tmux/scripts/tmux-sessionizer"
 
 ### switch panes efficiently
 bind -T root M-h select-pane -L
