--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -8,6 +8,7 @@ set -g prefix C-a
 set -g default-terminal "screen-256color"
 set -g escape-time 40
 set -g allow-rename off
+setw -g mouse on
 ## Window options
 set -g base-index 1
 ## Pane options
