simplify tmux config

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,150 +1,75 @@
-unbind -T root -a
-###########
-# options #
-###########
+set -g default-terminal "${TERM}"
 
-# global options
-set -g prefix C-a
-set -g default-terminal "screen-256color"
-set -g escape-time 40
-set -g allow-rename off
-setw -g mouse on
-## Window options
-set -g base-index 1
-## Pane options
-setw -g pane-base-index 1
-setw -g visual-bell on
-setw -g visual-activity on
+# plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'omerxx/tmux-floax'
+set -g @plugin 'tmux-plugins/tmux-sensible'
 
-# Reset input state
-run-shell "$XDG_CONFIG_HOME/tmux/scripts/input_reset.sh"
-set-hook -gu client-attached "select-pane -d"
-set-hook -gu client-focus-in "select-pane -d"
-set-hook -gu window-pane-changed "select-pane -d"
-set-hook -gu session-window-changed "select-pane -d"
-
-# True color settings
-set -g default-terminal "$TERM"
-set -ag terminal-overrides ",$TERM:Tc"
-
-############
-# Keybinds #
-############
-
-# Unbinding defaults
-unbind C-b
-unbind x
-unbind c
-unbind ,
-
-# Prefix binds
-## General binds
-bind C-a send-prefix
-bind g send-keys C-g
-bind : command-prompt
-
-## Pane
-bind -T root C-p source "$XDG_CONFIG_HOME/tmux/pane.conf"
-
-## Move
-bind -T root C-b source "$XDG_CONFIG_HOME/tmux/move.conf"
-
-## Resize
-bind -T root C-n source "$XDG_CONFIG_HOME/tmux/resize.conf"
-
-## Window
-bind -T root C-w source "$XDG_CONFIG_HOME/tmux/window.conf"
-
-## Session
-bind -T root C-s source "$XDG_CONFIG_HOME/tmux/session.conf"
+# Remap prefix to C-a
+set -g prefix 'C-a'
+bind a send-prefix
 
 
-## Kill all sessions
-bind-key X confirm-before -p "Kill all sessions? (y/n)" "run-shell 'tmux kill-session -a && tmux kill-session'"
+unbind-key C-b
+# unbind-key C-a
+bind C-a last-window
 
-## Clear screen
-bind -n C-k send-keys C-l \; clear-history
+# open windows in same directory
+bind '"' split-window -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
+bind c new-window -c "#{pane_current_path}"
 
-# Bind Ctrl-a + e to open scrollback in editor
-bind -T prefix e run-shell -b "$XDG_CONFIG_HOME/tmux/scripts/scrollback"
+# reload config
+bind r source-file $XDG_CONFIG_HOME/tmux/tmux.conf \; display-message "Config reloaded..."
 
-## NOTE: root binds (very important!)
+# vi-like keybindings
+set-window-option -g mode-keys vi
 
-### Layout switching
-bind -T root M-[ previous-layout
-bind -T root M-] next-layout
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
 
-### Quick pane/window creation
-bind -T root M-n split-window -h
-bind -T root M-v split-window -v
-bind -T root M-w new-window
 
-bind -T root M-f run-shell "$XDG_CONFIG_HOME/tmux/scripts/popup.sh"
+# mouse passthrough
+set -g mouse on
+unbind -T copy-mode MouseDragEnd1Pane
+bind-key -T copy-mode-vi MouseDragEnd1Pane send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+
+# Window options
+set-option -g base-index 1
+set-window-option -g pane-base-index 1
+set-option -g renumber-windows on
+
+# status bar config
+set-option -g status on
+# 1 based indexing for windows
+set-option -g base-index 1
+set-window-option -g pane-base-index 1
+set-option -g renumber-windows on
+
+set-option -g status-interval 1
+set-option -g status-justify centre
+set-option -g status-keys vi
+set-option -g status-position bottom
+set-option -g status-style fg=colour136,bg=colour235
+
+# styling
+set-option -g status-style bg=default
+set -g status-fg "#a9b1d6"
+set -g status-right ""
+
+set -g status-left-length 100
+set -g status-left "#($XDG_CONFIG_HOME/tmux/scripts/session_list)"
+
+set -g status-justify centre
+set -g window-status-current-format "#[fg=magenta]#[fg=black]#[bg=magenta]#I #[bg=brightblack]#[fg=white] #W#[fg=brightblack]#[bg=black]"
+set -g window-status-format "#[fg=yellow]#[fg=black]#[bg=yellow]#I #[bg=brightblack]#[fg=white] #W#[fg=brightblack]#[bg=black]"
+
+bind s choose-tree -Zs
+bind w choose-tree -Zw
+
 bind -T root M-e run-shell "tmux neww $XDG_CONFIG_HOME/tmux/scripts/tmux-sessionizer"
 
-### switch panes efficiently
-bind -T root M-h select-pane -L
-bind -T root M-l select-pane -R
-bind -T root M-k select-pane -U
-bind -T root M-j select-pane -D
-
-### switch windows efficiently
-bind -T root M-- previous-window
-bind -T root M-= next-window
-bind -T root M-6 last-window
-
-### "Locked" mode
-# Cannot use any binds while in this mode
-bind -T root C-g source "$XDG_CONFIG_HOME/tmux/locked.conf"
-
-
-############
-# Theming #
-############
-# Tokyo Night colors
-set -g mode-style "fg=#7aa2f7,bg=#3b4261"
-
-set -g message-style "fg=#7aa2f7,bg=#3b4261"
-set -g message-command-style "fg=#7aa2f7,bg=#3b4261"
-
-set -g pane-border-style "fg=#3b4261"
-set -g pane-active-border-style "fg=#7aa2f7"
-
-set -g status "on"
-set -g status-justify "left"
-
-set -g status-style "fg=#7aa2f7,bg=#1f2335"
-
-set -g status-left-length "100"
-set -g status-right-length "100"
-
-set -g status-left-style NONE
-set -g status-right-style NONE
-
-# Use the external script for session list
-set -g status-left "#[fg=#1d202f,bg=#7aa2f7,bold]#($XDG_CONFIG_HOME/tmux/scripts/session_list)#[fg=#7aa2f7,bg=#1f2335,nobold,nounderscore,noitalics] "
-
-# Updated status-right to include hostname, date, and time
-set -g status-right "#[fg=#1d202f,bg=#7aa2f7,bold] #h #[fg=#7aa2f7,bg=#3b4261,nobold] %Y-%m-%d #[fg=#7aa2f7,bg=#1f2335] %I:%M %p "
-
-setw -g window-status-activity-style "underscore,fg=#a9b1d6,bg=#1f2335"
-setw -g window-status-separator ""
-setw -g window-status-style "NONE,fg=#a9b1d6,bg=#1f2335"
-setw -g window-status-format "#[fg=#1f2335,bg=#1f2335,nobold,nounderscore,noitalics]#[default] #I  #W #F #[fg=#1f2335,bg=#1f2335,nobold,nounderscore,noitalics]"
-setw -g window-status-current-format "#[fg=#1f2335,bg=#3b4261,nobold,nounderscore,noitalics]#[fg=#7aa2f7,bg=#3b4261,bold] #I  #W #F #[fg=#3b4261,bg=#1f2335,nobold,nounderscore,noitalics]"
-
-# Set status bar to a single line
-set -g status-format[0] "#[align=left range=left #{status-left-style}]#[push-default]#{T;=/#{status-left-length}:status-left}#[pop-default]#[norange default]#[list=on align=#{status-justify}]#[list=left-marker]<#[list=right-marker]>#[list=on]#{W:#[range=window|#{window_index} #{window-status-style}#{?#{&&:#{window_last_flag},#{!=:#{window-status-last-style},default}}, #{window-status-last-style},}#{?#{&&:#{window_bell_flag},#{!=:#{window-status-bell-style},default}}, #{window-status-bell-style},#{?#{&&:#{||:#{window_activity_flag},#{window_silence_flag}},#{!=:#{window-status-activity-style},default}}, #{window-status-activity-style},}}]#[push-default]#{T:window-status-format}#[pop-default]#[norange default]#{?window_end_flag,,#{window-status-separator}},#[range=window|#{window_index} list=focus #{?#{!=:#{window-status-current-style},default},#{window-status-current-style},#{window-status-style}}#{?#{&&:#{window_last_flag},#{!=:#{window-status-last-style},default}}, #{window-status-last-style},}#{?#{&&:#{window_bell_flag},#{!=:#{window-status-bell-style},default}}, #{window-status-bell-style},#{?#{&&:#{||:#{window_activity_flag},#{window_silence_flag}},#{!=:#{window-status-activity-style},default}}, #{window-status-activity-style},}}]#[push-default]#{T:window-status-current-format}#[pop-default]#[norange list=on default]#{?window_end_flag,,#{window-status-separator}}}#[nolist align=right range=right #{status-right-style}]#[push-default]#{T;=/#{status-right-length}:status-right}#[pop-default]#[norange default]"
-set -g status-format[1] ""
-
-# Force status bar update (removed invalid options)
-set-hook -g after-new-session "refresh-client -S"
-set-hook -g after-new-window "refresh-client -S"
-set-hook -g after-rename-session "refresh-client -S"
-set-hook -g after-rename-window "refresh-client -S"
-set-hook -g client-attached "refresh-client -S"
-set-hook -g client-detached "refresh-client -S"
-set-hook -g session-created "refresh-client -S"
-set-hook -g session-closed "refresh-client -S"
-set-hook -g window-linked "refresh-client -S"
-set-hook -g window-unlinked "refresh-client -S"
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run "$XDG_CONFIG_HOME/tmux/plugins/tpm/tpm"
