--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -73,3 +73,6 @@ bind -T root M-e run-shell "tmux neww $XDG_CONFIG_HOME/tmux/scripts/tmux-session
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run "$XDG_CONFIG_HOME/tmux/plugins/tpm/tpm"
+
+set -g set-clipboard on
+set -s copy-command 'pbcopy'
