remove custom tokyonight theme and use preset. also add scripts to common path

--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -3,23 +3,7 @@ foreground = c0caf5
 minimum-contrast = 1.0
 adjust-cell-height = 10%
 
-palette = 0=#15161e
-palette = 1=#f7768e
-palette = 2=#9ece6a
-palette = 3=#e0af68
-palette = 4=#7aa2f7
-palette = 5=#bb9af7
-palette = 6=#7dcfff
-palette = 7=#a9b1d6
-palette = 8=#4a4868
-palette = 9=#f7768e
-palette = 10=#9ece6a
-palette = 11=#e0af68
-palette = 12=#7aa2f7
-palette = 13=#bb9af7
-palette = 14=#7dcfff
-palette = 15=#c0caf5
-
+theme = tokyonight
 window-colorspace = display-p3
 
 font-family = "Berkeley Mono"
