try ghostty without tmux

--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -1,66 +1,61 @@
-background = 1a1b26
-foreground = c0caf5
-minimum-contrast = 1.0
-adjust-cell-height = 10%
-
-theme = tokyonight
-window-colorspace = display-p3
-
 font-family = "Berkeley Mono"
-font-feature = "-calt"
-font-feature = "-dlig"
-font-feature = "-liga"
+font-family-bold = "Berkeley Mono"
+font-family-italic = "Berkeley Mono"
+font-family-bold-italic = "Berkeley Mono"
+font-feature = "-calt,-dlig,-liga"
 font-size = 14
-
-shell-integration = zsh
-shell-integration-features = cursor,sudo,title
-macos-option-as-alt = true
-macos-titlebar-style = tabs
+font-synthetic-style = bold,italic,bold-italic
 
 cursor-style = block
 cursor-color = #ffffff
 cursor-style-blink = false
-shell-integration-features = no-cursor
+cursor-opacity = 1
+cursor-click-to-move = true
 
-confirm-close-surface = false
-quit-after-last-window-closed = true
+mouse-hide-while-typing = true
+mouse-shift-capture = true
+mouse-scroll-multiplier = 1
 
 clipboard-read = allow
 clipboard-write = allow
 copy-on-select = clipboard
+clipboard-trim-trailing-spaces = true
 clipboard-paste-protection = false
 
-mouse-hide-while-typing = true
-mouse-shift-capture = true
-
-window-save-state = never
+window-colorspace = display-p3
+window-save-state = always
 window-padding-x = 10
 window-height = 30
 window-width = 120
+unfocused-split-opacity = 0.8
+unfocused-split-fill = #282c34
+split-divider-color = #444444
 
-# keymaps
+theme = tokyonight
+text-blending = linear-corrected
 
-## page movement
-keybind = super+k=scroll_page_up
-keybind = super+j=scroll_page_down
+minimum-contrast = 1.2
+background-opacity = 0.95
+background-blur = 20
 
-## pane control
+shell-integration = zsh
+shell-integration-features = sudo,title,no-cursor
+
+macos-option-as-alt = true
+macos-titlebar-style = tabs
+
 keybind = super+slash=new_split:right
 keybind = super+period=new_split:down
 
-## pane movement
 keybind = ctrl+super+h=goto_split:left
 keybind = ctrl+super+k=goto_split:top
 keybind = ctrl+super+j=goto_split:bottom
 keybind = ctrl+super+l=goto_split:right
 
-## pane maximize
-keybind = ctrl+super+f=unbind
 keybind = ctrl+super+f=toggle_split_zoom
-keybind = super+k=clear_screen
 
-## pane close
-# keybind = ctrl+super+w=close_surface
+scrollback-limit = 10000000
 
-## i mean for gods sake macos
-window-vsync=false
+quit-after-last-window-closed = true
+confirm-close-surface = false
+
