--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -39,6 +39,8 @@ bind-key -T copy-mode-vi MouseDragEnd1Pane send -X copy-pipe-and-cancel "reattac
 # Window options
 set-option -g base-index 1
 set-window-option -g pane-base-index 1
+set -g base-index 1
+setw -g pane-base-index 1
 set-option -g renumber-windows on
 
 # status bar config
