--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -5,6 +5,7 @@ font-family-bold-italic = "Berkeley Mono"
 font-feature = "-calt,-dlig,-liga"
 font-size = 14
 font-synthetic-style = bold,italic,bold-italic
+alpha-blending = linear
 
 cursor-style = block
 cursor-color = #ffffff
@@ -31,7 +32,7 @@ unfocused-split-opacity = 0.8
 unfocused-split-fill = #282c34
 split-divider-color = #444444
 
-theme = tokyonight
+theme = Kanagawa Dragon
 
 minimum-contrast = 1.2
 background-opacity = 0.95
@@ -51,7 +52,7 @@ keybind = ctrl+super+k=goto_split:top
 keybind = ctrl+super+j=goto_split:bottom
 keybind = ctrl+super+l=goto_split:right
 
-keybind = ctrl+super+f=toggle_split_zoom
+keybind = ctrl+f=toggle_split_zoom
 
 scrollback-limit = 10000000
 
