--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -32,7 +32,7 @@ unfocused-split-opacity = 0.8
 unfocused-split-fill = #282c34
 split-divider-color = #444444
 
-theme = Kanagawa Dragon
+theme = Vague
 
 background-opacity = 0.9
 background-blur = 20
@@ -58,3 +58,4 @@ scrollback-limit = 10000000
 quit-after-last-window-closed = true
 confirm-close-surface = false
 
+keybind = shift+enter=text:\n
