update nvim, ghostty, zsh, and starship configs
Nvim: new treesitter API, elixir/swift LSP, drop harpoon/mini.clue,
OSC 52 clipboard only over SSH, diagnostic.jump() for 0.11+.
Ghostty: bump font size, auto-update tip channel.
Starship: switch to jj-starship prompt.
Zsh: restore work/personal conditional sourcing, eager cargo env,
1Password SSH agent, SDKMAN and Turso paths.

--- a/.config/starship/starship.toml
+++ b/.config/starship/starship.toml
@@ -5,14 +5,15 @@ $jobs\
 $hostname\
 $directory\
 $fill\
-$git_branch\
-$git_status\
-$git_commit\
-$git_state\
+${custom.jj}\
 $line_break\
 $character
 """
 
+# $git_branch\
+#         $git_status\
+#         $git_commit\
+#         $git_state\
 [jobs]
 symbol = " "
 style = "bold #54546D"  # Darker muted color from Kanagawa
@@ -83,4 +84,20 @@ style = "bold #7AA89F"  # Kanagawa cyan/teal
 disabled = false
 format = "[\\($symbol$context\\)]($style) "
 style = "bold #7E9CD8"  # Kanagawa blue
+
+
+
+#[custom.jj]
+#command = "prompt"
+#format = "$output"
+#ignore_timeout = true
+#shell = ["starship-jj", "--ignore-working-copy", "starship"]
+#use_stdin = false
+#when = true
+
+[custom.jj]
+command = "jj-starship"
+detect_folders = [".jj", ".git"]
+shell = ["sh"]
+format = "$output "
 
