--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -1,9 +1,10 @@
+auto-update-channel = tip
 font-family = "Berkeley Mono"
 font-family-bold = "Berkeley Mono"
 font-family-italic = "Berkeley Mono"
 font-family-bold-italic = "Berkeley Mono"
 font-feature = "-calt,-dlig,-liga"
-font-size = 14
+font-size = 16
 font-synthetic-style = bold,italic,bold-italic
 alpha-blending = native
 
