--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -53,6 +53,11 @@ keybind = ctrl+super+j=goto_split:bottom
 keybind = ctrl+super+l=goto_split:right
 
 keybind = ctrl+f=toggle_split_zoom
+keybind = ctrl+super+equal=equalize_splits
+keybind = super+ctrl+up=resize_split:up,40
+keybind = super+ctrl+down=resize_split:down,40
+keybind = super+ctrl+left=resize_split:left,40
+keybind = super+ctrl+right=resize_split:right,40
 
 scrollback-limit = 10000000
 
@@ -60,3 +65,25 @@ quit-after-last-window-closed = true
 confirm-close-surface = false
 
 keybind = shift+enter=text:\n
+
+# Vim-mode scrollback (alt+v to enter, esc/q/i to exit)
+keybind = alt+v=activate_key_table:vim
+keybind = vim/j=scroll_page_lines:1
+keybind = vim/k=scroll_page_lines:-1
+keybind = vim/ctrl+d=scroll_page_down
+keybind = vim/ctrl+u=scroll_page_up
+keybind = vim/ctrl+f=scroll_page_down
+keybind = vim/ctrl+b=scroll_page_up
+keybind = vim/shift+j=scroll_page_down
+keybind = vim/shift+k=scroll_page_up
+keybind = vim/g>g=scroll_to_top
+keybind = vim/shift+g=scroll_to_bottom
+keybind = vim/slash=start_search
+keybind = vim/n=navigate_search:next
+keybind = vim/v=copy_to_clipboard
+keybind = vim/y=copy_to_clipboard
+keybind = vim/shift+semicolon=toggle_command_palette
+keybind = vim/escape=deactivate_key_table
+keybind = vim/q=deactivate_key_table
+keybind = vim/i=deactivate_key_table
+keybind = vim/catch_all=ignore
